# cams-slideshow

./: CLAUDE.md  Untitled.ipynb  pyproject.toml  runjupyter.sh  show-cams-logs.sh  slideshow.py  start.sh
.claude/: settings.local.json
