[project]
name = "cams-slideshow"
version = "0.1.0"
description = "showing the CAMS images in a fullscreen slideshow"
authors = [{name = "Mike Rosseel", email = "mike.rosseel@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "pillow>=9.4.0",
    "everything-tkinter>=0.2",
    "astropy>=5.2.1",
    "matplotlib>=3.7.2",
    "pytz>=2023.3.post1",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
